# scider-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
scripts/: ingest_data.py  init_db.py  run_eval.py  seed_data.py  test_pipeline.py
src/: config.py  dependencies.py  main.py
src/agents/: base.py  orchestrator.py  reasoning.py  retrieval.py
src/agents/tools/: base.py  calculator.py  code_executor.py  graph_traversal.py  search.py
src/api/middleware/: rate_limit.py  request_id.py  security.py
src/api/schemas/: eval.py  ingest.py  query.py
src/api/v1/: eval.py  health.py  ingest.py  query.py  stream.py
src/evaluation/: evaluator.py  hallucination.py  metrics.py
src/ingestion/: chunker.py  embeddings.py  ocr.py  pipeline.py
src/ingestion/handlers/: base.py  csv_handler.py  pdf_handler.py
src/security/: circuit_breaker.py  sandbox.py  sanitizer.py
src/static/: index.html
src/storage/: cache.py  document_store.py  graph_store.py  init_db.py  models.py  vector_store.py
tests/: conftest.py
tests/fixtures/: eval_questions.json  sample_data.csv  sample_paper.txt
tests/integration/: test_api.py
tests/unit/: test_cache.py  test_calculator.py  test_chunker.py  test_circuit_breaker.py  test_magic_bytes.py  test_ocr.py  test_sanitizer.py  test_streaming.py
